--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Syvix</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Syvics</span>
 								</a>
 
 							<!-- Nav -->
