--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Syvics, modern governance and community solutions.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>We are doing intersting things in the central Vancouver Island area.</h1>
+								<p>From reimagining our cities as walkable places to developing modern tools for governance, we are committed to improving the central Vancouver Island area.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Project 1 </h2>
@@ -70,7 +70,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Project 2</h2>
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Project 3</h2>
