--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title"><h1>Syvics</h1></span>
+									<span class="symbol"><img src="images/aalogo.jpg" alt="Syvics Logo" /></span><span class="title"><h1>Syvics</h1></span>
 								</a>
 
 							<!-- Nav -->
