--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/aalogo.jpg" alt="Syvics Logo" /></span><span class="title"><h1>Syvics</h1></span>
+							<img src="images/aalogo.jpg" alt="Syvics Logo" />	
+							<a href="index.html" class="logo">
+									<span class="title"><h1>Syvics</h1></span>
 								</a>
 
 							<!-- Nav -->
