--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<img src="images/aalogo.jpg" alt="Syvics Logo" />	
+							<img src="https://drive.google.com/file/d/0Bx_eC1CGiVyTSEF5X0t6NmhvaUE/view?usp=sharing" alt="Syvics Logo" />	
 							<a href="index.html" class="logo">
 									<span class="title"><h1>Syvics</h1></span>
 								</a>
